--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,15 @@
+
 PORT=3003
 
-https://dashboard.stripe.com/test/apikeys
+# https://dashboard.stripe.com/test/apikeys
 STRIPE_SECRET=
+
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
+
+# https://dashboard.stripe.com/test/workbench/webhooks/
+# This is the Webhook signing secret 
+STRIPE_ENDPOINTSECRET=
+
+
+
