payments-ms changes

--- a/.env.template
+++ b/.env.template
@@ -11,5 +11,8 @@ STRIPE_CANCEL_URL=
 # This is the Webhook signing secret 
 STRIPE_ENDPOINTSECRET=
 
+# NATS_SERVERS="nats://localhost:4222, nats://localhost:4223"
+NATS_SERVERS="nats://localhost:4222"
+
 
 
